updated docker-compose.yml to run spring-boot-app in docker container